# ElevoSandbox

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml  build.rs
agent/src/: connection.rs  main.rs
agent/src/handlers/: process.rs  pty.rs
agent/src/proto/: workspace.v1.rs
deploy/: README.md  config.env  deploy.sh
docker/: Dockerfile.server  docker-compose.prod.yml  docker-compose.yml
docs/: api-minimal.md  deployment.md  requirements.md  technical-design.md
docs/api/: 00-rest-api.md  01-sandbox.md  03-process.md
docs/design/: workspace-sandbox-decoupling.md
docs/minimal/: 01-sandbox.md  02-filesystem.md  03-process.md  04-pty.md  05-common.md
docs/types/: common.md
images/: workspace-agent.service
images/workspace-base/: Dockerfile
images/workspace-test/: Dockerfile
proto/workspace/v1/: agent.proto  process.proto  pty.proto  sandbox.proto  workspace.proto
scripts/: build-and-push.sh  build.sh  deploy.sh  test.sh
sdk-go/: README.md  client.go  errors.go  go.mod  nfs.go  sandbox.go  types.go  workspace.go  workspace_service.go  workspace_test.go
sdk-go/examples/basic/: main.go
sdk-go/examples/concurrent/: main.go
sdk-go/examples/error_handling/: main.go
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: error_handling.py  streaming.py
sdk-python/src/workspace_sdk/: __init__.py  async_client.py  client.py
sdk-python/src/workspace_sdk/services/: __init__.py  nfs.py  process.py  sandbox.py  workspace.py
sdk-python/src/workspace_sdk/types/: __init__.py
sdk-typescript/: README.md  package.json
sdk-typescript/examples/: basic.ts  error-handling.ts
sdk-typescript/src/: client.ts  index.ts
sdk-typescript/src/errors/: index.ts
sdk-typescript/src/services/: index.ts  nfs.ts  process.ts  pty.ts  sandbox.ts  workspace.ts
sdk-typescript/src/types/: index.ts
server/: Cargo.toml  build.rs
server/migrations/: 20240116000000_add_workspaces.sql
server/src/: config.rs  error.rs  main.rs
server/src/api/: mod.rs
server/src/api/grpc/: mod.rs
server/src/api/http/: filesystem.rs  mod.rs  process.rs  pty.rs  sandbox.rs  workspace.rs
server/src/api/mcp/: common.rs  developer.rs  executor.rs  full.rs  handler.rs  mod.rs  types.rs
server/src/api/mcp/tools/: mod.rs
server/src/domain/: mod.rs  sandbox.rs  types.rs  workspace.rs
server/src/infra/: agent_pool.rs  docker.rs  mod.rs  nfs.rs  sqlite.rs  workspace_repository.rs
server/src/proto/: workspace.v1.rs
server/src/service/: mod.rs  process.rs  pty.rs  sandbox.rs  workspace.rs
tests/: e2e_scenarios.md  run-tests.sh
tests/e2e/: run_scenarios.sh  test-sandbox.ts
tests/e2e-python/: test_sandbox.py
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  tests.rs
tests/mcp-client/: Cargo.toml
tests/mcp-client/src/: main.rs
tests/sdk_tests/: test_go_sdk.sh
unified-workspace-sdk/: .env.example  Cargo.toml  README.md
unified-workspace-sdk/agent/: Cargo.toml  build.rs
unified-workspace-sdk/agent/src/: main.rs
unified-workspace-sdk/agent/src/handlers/: mod.rs  process.rs
unified-workspace-sdk/agent/src/proto/: mod.rs
unified-workspace-sdk/docs/: api-full.md  comparison.md  requirements.md  technical-design.md
unified-workspace-sdk/docs/api/: 00-rest-api.md  01-sandbox.md  02-filesystem.md  04-pty.md  05-git.md  06-lsp.md  07-storage.md
unified-workspace-sdk/docs/minimal/: README.md
unified-workspace-sdk/docs/types/: common.md
unified-workspace-sdk/images/: workspace-agent.service
unified-workspace-sdk/images/workspace-test/: Dockerfile
unified-workspace-sdk/proto/workspace/v1/: process.proto  pty.proto  sandbox.proto
unified-workspace-sdk/scripts/: build.sh  run-integration-tests.sh  test.sh
unified-workspace-sdk/sdk-go/: README.md  client.go  filesystem.go  process.go  pty.go  sandbox.go  types.go  workspace.go
unified-workspace-sdk/sdk-python/: README.md  pyproject.toml
unified-workspace-sdk/sdk-python/examples/: async_example.py  basic.py  concurrent.py
unified-workspace-sdk/sdk-python/src/workspace_sdk/: __init__.py
unified-workspace-sdk/sdk-python/src/workspace_sdk/errors/: __init__.py
unified-workspace-sdk/sdk-python/src/workspace_sdk/services/: __init__.py  filesystem.py  pty.py  sandbox.py
unified-workspace-sdk/sdk-typescript/: README.md  package.json
unified-workspace-sdk/sdk-typescript/examples/: concurrent.ts  streaming.ts
unified-workspace-sdk/sdk-typescript/src/: client.ts  index.ts
unified-workspace-sdk/sdk-typescript/src/services/: filesystem.ts  sandbox.ts
unified-workspace-sdk/server/: Cargo.toml
unified-workspace-sdk/server/migrations/: 20240101000000_initial.sql
unified-workspace-sdk/server/src/: config.rs  error.rs  main.rs
unified-workspace-sdk/server/src/api/: mod.rs
unified-workspace-sdk/server/src/api/grpc/: mod.rs
unified-workspace-sdk/server/src/api/http/: process.rs  pty.rs  sandbox.rs
unified-workspace-sdk/server/src/domain/: mod.rs  sandbox.rs
unified-workspace-sdk/server/src/infra/: agent_pool.rs  docker.rs  mod.rs  nfs.rs
unified-workspace-sdk/server/src/proto/: mod.rs
unified-workspace-sdk/server/src/service/: pty.rs
unified-workspace-sdk/tests/: e2e_scenarios.md  run-tests.sh
unified-workspace-sdk/tests/e2e/: package.json  run_scenarios.sh
unified-workspace-sdk/tests/e2e-python/: test_sandbox.py
unified-workspace-sdk/tests/integration/src/: lib.rs
unified-workspace-sdk/tests/sdk_tests/: test_python_sdk.py  test_typescript_sdk.sh  test_typescript_sdk.ts
