[workspace]
resolver = "2"
members = [
    "server",
    "agent",
    "tests/integration",
    "tests/mcp-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elevo Team"]
license = "MIT"
repository = "https://github.com/OpenElevo/ElevoSandbox"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"

# HTTP framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Docker
bollard = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1.9"
dashmap = "6.1"

# PTY (for agent)
portable-pty = "0.8"

# NFS server
nfsserve = "0.10"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Testing
mockall = "0.13"

# MCP Protocol
rmcp = { version = "0.12", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-child-process"] }
schemars = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
