[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# HTTP client - use rustls instead of openssl
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
path = "src/lib.rs"

[[test]]
name = "integration"
path = "src/tests.rs"
