[package]
name = "workspace-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified Workspace SDK Agent"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

# PTY
portable-pty = { workspace = true }

# Unix utilities
nix = { version = "0.29", features = ["signal", "process"] }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
