[package]
name = "workspace-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified Workspace SDK Server"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# HTTP framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Database
sqlx = { workspace = true }

# Docker
bollard = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# NFS server
nfsserve = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
